insights/3.10/widgets/conditional-styling.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling)[Next](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [Insights](https://docs.tigergraph.com/insights/3.10/intro/)
  *     * [Overview](https://docs.tigergraph.com/insights/3.10/intro/)
    * [Get Started](https://docs.tigergraph.com/insights/3.10/intro/get-started)
    * [Applications](https://docs.tigergraph.com/insights/3.10/intro/applications)
  *     * [Widgets](https://docs.tigergraph.com/insights/3.10/widgets/)
      * [Graph](https://docs.tigergraph.com/insights/3.10/widgets/graph-widget)
      * [Map](https://docs.tigergraph.com/insights/3.10/widgets/map-widget)
      * [Table](https://docs.tigergraph.com/insights/3.10/widgets/table-widget)
      * [Value](https://docs.tigergraph.com/insights/3.10/widgets/single-value)
      * [Markdown](https://docs.tigergraph.com/insights/3.10/widgets/markdown-widget)
      * [Line Chart](https://docs.tigergraph.com/insights/3.10/widgets/line-chart)
      * [Bar Chart](https://docs.tigergraph.com/insights/3.10/widgets/bar-chart)
      * [Pie Chart](https://docs.tigergraph.com/insights/3.10/widgets/pie-chart)
      * [Sankey](https://docs.tigergraph.com/insights/3.10/widgets/sankey)
      * [Scatter Chart](https://docs.tigergraph.com/insights/3.10/widgets/scatter-plot-widget)
      * [Inputs](https://docs.tigergraph.com/insights/3.10/widgets/inputs)
    * [Actions](https://docs.tigergraph.com/insights/3.10/widgets/actions)
    * [Conditional Styling](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling)
  *     * [Insights Release Notes](https://docs.tigergraph.com/insights/3.10/release-notes/)
    * [Legacy Version Documentation](https://docs.tigergraph.com/insights/3.10/release-notes/legacy-tg-versions)


Insights 3.10
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [Insights 3.10](https://docs.tigergraph.com/insights/3.10/intro/)
  * [Conditional Styling](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling)


[Edit this Page](https://github.com/tigergraph/insights-docs/edit/3.10/modules/widgets/pages/conditional-styling.adoc)
### Contents
  * [Widgets](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling#_widgets)
  * [Table](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling#_table)
  * [Graph](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling#_graph)
  * [Map](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling#_map)
  * [always Option](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling#_always_option)


# Conditional Styling
### Contents
  * [Widgets](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling#_widgets)
  * [Table](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling#_table)
  * [Graph](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling#_graph)
  * [Map](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling#_map)
  * [always Option](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling#_always_option)


Several widgets support conditional styling, similar to conditional formatting in Excel.
This page is a reference for what features of each widget accept conditional styling, as well as some examples of practical applications.
Three types of conditions are available:
  * Simple condition: supports the following operators
    * `=` equal to
    * `!=` not equal to
    * `>` greater than
    * `>=` greater than or equal to
    * `<` less than
    * `<=` less than or equal to
  * Range condition: Only available for `FLOAT` and `INT` data types. The min point and max point is prefilled based on your data, but can be changed.
  * Unique condition: The system picks a color based on the uniqueness of the value.


Other primitive data types `boolean` and `date` and more complex data types like `array` and `map` are not yet supported by conditional styling.  
---  
## [](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling#_widgets)Widgets
The Table, Graph, and Map widgets support conditional styling.
### [](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling#_table)Table
Table widgets support highlighting a row in a certain color based on a single column value.
![table conditional styling](https://docs.tigergraph.com/insights/3.10/widgets/_images/table-conditional-styling.png)
In this example, Person vertices with an annual salary of over $115,000 are highlighted blue and Person vertices with an age under 20 are highlighted red. The conditions execute in order from top to bottom, so even though the first row in the shown results matches both conditions, the red overwrites the blue.
### [](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling#_graph)Graph
Graph widgets support highlighting vertices and edges based on their attribute values. You can also choose to resize vertices and edges based on their attribute values to show importance.
![Screen Shot 2024 03 07 at 1.48.13 PM](https://docs.tigergraph.com/insights/3.10/widgets/_images/Screen%20Shot%202024-03-07%20at%201.48.13%20PM.png)
This view shows three transactions between a city (vertex/gray), an infection (vertex/red), and a case in city (edge/light blue).
Conditional styling has been applied to distinguish the two types of vertices and the edge connecting them.
### [](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling#_map)Map
Map widgets support highlighting vertices and edges based on their attribute values. You can use condition style to change the size and color of map vertices and edges
![Screen Shot 2024 03 07 at 1.53.42 PM](https://docs.tigergraph.com/insights/3.10/widgets/_images/Screen%20Shot%202024-03-07%20at%201.53.42%20PM.png)
In this example, all city and travel event vertices are highlighted and connected by the edge.
### [](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling#_always_option)`always` Option
An `always` option in the condition dropdown.
![Screen Shot 2024 03 07 at 1.59.12 PM](https://docs.tigergraph.com/insights/3.10/widgets/_images/Screen%20Shot%202024-03-07%20at%201.59.12%20PM.png)
Once you select always, this style rule will apply to the entire widget.
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


